    *pel-toggle-flx-ido*, bound the ``<f11> M-c M-f`` key sequence, to stop or
    start its use during an editing session.
  - New: Add support for the *smex* external package.  Activate it by setting
    the *pel-use-smex* user-option to *t*.
  - New: Add support for the *ido-grid-mode* external package.  Activate it by
    setting the *pel-use-ido-grid-mode* user-option to *t*.
  - New: Add and then disabled support for the *ido-vertical-mode* external
    package. Activate it by setting the *pel-use-ido-vertical-mode*
    user-option to *t*.
  - New: Add support for the *ido-ubiquitous-mode* via the
    ido-completing-read+ package.
    - It is activated via the
      *pel-use-completing-read+* user-option.
    - When active the *pel-toggle-ido-ubiquitous* command is mapped to ``<f11>
      M-C``.
  - New: *pel-cl-hyperspec-lookup* command that uses Slime, SLY or PEL's own
    implementation of Common Lisp Hyperspec symbol lookup.  It's bound to the
    Common Lisp specific ``<f12> ?`` key sequence.
  - New: During Ido input completion, the ``<f1>`` key opens the
    [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/completion-input.pdf][⅀Input Completion PDF]] which now describes all key bindings available for
    the Ido prompts.  the same key is available in Ivy prompts.
  - New: Add support for ivy-avy.  It is activated when both *pel-use-ivy* and
    *pel-use-ivy* user-options are activated.
  - New: Add extra key bindings for the ivy key-map to allow
    *ivy-restrict-to-matches* and *ivy-avy* to be accessible when Emacs runs
    in terminal mode.
- Update: *Key Chords*:
  - New: a new key prefix is used to access key-chord commands:
    *pel:mode-key-chord*, mapped to ``<f11> <f5> k``.  It holds the following
    commands:
    - Command *key-chord-mode*, mapped to ``<f11> <f5> k k``.
    - Command *pel-key-chord-describe* (bound to ``<f11> <f5> k ?``)
      displays the state of key-chord/key-seq and the key bindings if